--- a/index.html
+++ b/index.html
@@ -1,45 +1,34 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alap HTML oldal</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8" />
+    <title>névtelen</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Üdvözöllek a Stílusfeladat Projektben!</h1>
-        <nav>
+    <div class="container">
+        <h1>A dialog parancs</h1>
+        <p>
+            A dialog különböző típusú párbeszédablakokat jelenít meg.
+            Használhatjuk scriptekben, amelyek így sokkal barátságosabb
+            képet mutathatnak.
+        </p>
+        <p>
+            A dialog majdnem 100 parancssori kapcsolóval rendelkezik.
+            Használata azonban mégis nagyon könnyű.
+        </p>
+        <p>
+            Létrehozhatók:
             <ul>
-                <li><a href="#">Főoldal</a></li>
-                <li><a href="#">Rólunk</a></li>
-                <li><a href="#">Kapcsolat</a></li>
+                <li>listák</li>
+                <li>naptárak</li>
+                <li>szerkesztődobozok</li>
+                <li>információs dobozok</li>
+                <li>menü doboz</li>
+                <li>jelszó mező</li>
+                <li>előrehaladási doboz</li>
             </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section>
-            <h2>Bevezetés</h2>
-            <p>Ez egy alap HTML oldal, amelyet meg kell stílusozni. Adj hozzá színeket, betűtípusokat és elrendezést!</p>
-        </section>
-
-        <section>
-            <h2>Feladatok</h2>
-            <ul>
-                <li>Adj háttérszínt az oldalnak.</li>
-                <li>Formázd meg a fejlécet és a navigációs menüt.</li>
-                <li>A linkek változtassák a színüket, ha föléjük viszed az egeret.</li>
-                <li>A főcím legyen nagyobb és középre igazított.</li>
-                <li>A bekezdéseknek adj egy jól olvasható betűtípust.</li>
-                <li>Használj rácsszerkezetet a tartalom elrendezésére.</li>
-                <li>Adj hozzá egy láblécet, amely tartalmazza a szerző nevét és az évszámot.</li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>Készítette: Vincze Károly Viktor | 2025</p>
-    </footer>
+        </p>
+    </div>
 </body>
 </html>
